[maven-release-plugin] prepare release v0.0.43